# facet_bitcode

./: Cargo.toml  README.md  rustfmt.toml
src/: benches.rs  cache.rs  codec.rs  consume.rs  decoder.rs  deserialize.rs  encoder.rs  error.rs  lib.rs  primitive.rs  raw_vec_fork.rs  serialize.rs  slice.rs  strided.rs  struct_.rs
src/benches/: log.rs  mesh.rs  nested.rs
