[package]
name = "facet_bitcode"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.14", features = [ "min_const_generics" ] }
facet-core = { version = "0.27.16", default-features = false }

[dev-dependencies]
bincode = "1"
bitcode = { version = "0.6.6", features = [ "serde" ]}
facet = "0.27.16"
facet-xdr = "0.1.19"
paste = "1.0.15"
serde = { version = "1", features = [ "derive" ]}

[features]
std = []
default = [ "std" ]
